--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
           - "types-pyyaml"
           - "types-psutil"
         args:
-          - "--no-warn-return-any"  # Disable this because it doesn't know about 3rd part imports
+          - "--no-warn-return-any" # Disable this because it doesn't know about 3rd party imports
           - "--ignore-missing-imports"
   - repo: https://github.com/psf/black
     rev: 23.3.0
