--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,3 +133,6 @@ plugins:
             show_signature: true
             show_signature_annotations: false
             docstring_section_style: spacy
+            filters:
+              - "!^_[^_]"
+              - "_sample"  # Kind of a hack to have this render a private method
