--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
       - id: debug-statements
         files: '^src/.*\.py$'
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.1.1
+    rev: v1.2.0
     hooks:
       - id: mypy
         additional_dependencies:
@@ -34,8 +34,10 @@ repos:
           - "types-pyyaml"
           - "types-psutil"
         args:
-          - "--no-warn-return-any"  # Disable this because it doesn't know about 3rd part imports
+          - "--no-warn-return-any" # Disable this because it doesn't know about 3rd party imports
           - "--ignore-missing-imports"
+          - "--show-traceback"
+          - "--pdb"
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
