--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,9 @@
 name = "byop"
 version = "0.8.0"
 dependencies = [
-  "typing_extensions",  # Better typing
-  "more_itertools",  # Better iteration
-  "psutil",  # Used for process termination of executors
+  "typing_extensions", # Better typing
+  "more_itertools",    # Better iteration
+  "psutil",            # Used for process termination of executors
   "attrs",
   "pandas",
   "numpy",
@@ -60,10 +60,7 @@ doc = [
   "pillow",
   "cairosvg",
 ]
-smac = [
-  "smac>=2.0",
-  "configspace",
-]
+smac = ["smac>=2.0", "configspace"]
 optuna = ["optuna"]
 
 [project.urls]
@@ -117,19 +114,25 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 select = [
   "A",
+  # "ANN", # Handled by mypy
   "ARG",
   "B",
   "BLE",
-  "C",
+  "COM",
   "C4",
   "D",
   "DTZ",
   "E",
+  # "EXE", Meh
+  "ERA",
   "F",
   "FBT",
   "I",
+  # "ISC",  # Favours implicit string concatenation
   "INP",
+  # "INT", # I don't understand this one
   "N",
+  "NPY",
   "PD",
   "PLC",
   "PLE",
@@ -137,16 +140,21 @@ select = [
   "PLW",
   "PIE",
   "PT",
+  "PTH",
+  # "PYI", # Specific to .pyi files for type stubs
   "Q",
-  "PGH004", # Use specific rule codes when using noqa
+  "PGH004",
   "RET",
   "RUF",
   "C90",
   "S",
+  # "SLF",    # Private member accessed (sure, it's python)
   "SIM",
-  "T",
-  # "TRY",
+  # "TRY", # Good in principle, would take a lot of work to statisfy
   "T10",
+  "T20",
+  "TID",
+  "TCH",
   "UP",
   "N",
   "W",
@@ -154,17 +162,19 @@ select = [
 ]
 
 ignore = [
-  "D104", # Missing docstring in public package
-  "D105", # Missing docstring in magic mthod
-  "D203", # 1 blank line required before class docstring
-  "D205", # 1 blank line between summary and description
-  "D401", # First line of docstring should be in imperative mood
-  "N806", # Variable X in function should be lowercase
-  "E731", # Do not assign a lambda expression, use a def
-  "A003", # Shadowing a builtin
-  "S101", # Use of assert detected.
-  "W292", # No newline at end of file
+  "D104",    # Missing docstring in public package
+  "D105",    # Missing docstring in magic mthod
+  "D203",    # 1 blank line required before class docstring
+  "D205",    # 1 blank line between summary and description
+  "D401",    # First line of docstring should be in imperative mood
+  "N806",    # Variable X in function should be lowercase
+  "E731",    # Do not assign a lambda expression, use a def
+  "A003",    # Shadowing a builtin
+  "S101",    # Use of assert detected.
+  "W292",    # No newline at end of file
   "PLC1901", # "" can be simplified to be falsey
+  "TCH003", # Move stdlib import into TYPE_CHECKING
+            # These tend to be lighweight and confuse pyright
 ]
 
 exclude = [
@@ -193,13 +203,14 @@ exclude = [
 # Exclude a variety of commonly ignored directories.
 [tool.ruff.per-file-ignores]
 "tests/*.py" = [
-    "S101",
-    "D103",
-    "ANN001",
-    "ANN201",
-    "D100",
-    "PLR2004",
-    "PD901",  #  X is a bad variable name. (pandas)
+  "S101",
+  "D103",
+  "ANN001",
+  "ANN201",
+  "D100",
+  "PLR2004",
+  "PD901",   #  X is a bad variable name. (pandas)
+  "TCH",
 ]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
@@ -220,6 +231,7 @@ convention = "google"
 
 [tool.mypy]
 python_version = "3.8"
+packages = ["src/byop", "tests"]
 
 show_error_codes = true
 
@@ -232,7 +244,11 @@ disallow_untyped_defs = true       # All functions must have types
 disallow_untyped_decorators = true # ... even decorators
 disallow_incomplete_defs = true    # ...all types
 
+no_implicit_optional = true
+check_untyped_defs = true
+
 warn_return_any = true
+warn_unused_ignores = true
 
 
 [[tool.mypy.overrides]]
@@ -242,11 +258,8 @@ disallow_untyped_decorators = false # Test decorators are not properly typed
 disallow_incomplete_defs = false    # Sometimes we just want to ignore verbose types
 
 [[tool.mypy.overrides]]
-module = [
-  "sklearn.*",
-  "ConfigSpace.*",
-  "pandas.*",
-  "more_itertools.*",
-]
+module = ["sklearn.*", "ConfigSpace.*", "pandas.*", "more_itertools.*"]
 ignore_missing_imports = true
 
+[tool.pyright]
+include = ["tests"]
