--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ target-version = ['py38']
 target-version = "py38"
 line-length = 88
 show-source = true
-src = ["src", "tests"]
+src = ["src", "tests", "examples"]
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
@@ -214,7 +214,8 @@ exclude = [
 ]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
-"examples/*" = ["INP001"]
+"examples/*" = ["INP001", "I002", "E741", "D101", "D103", "T20"]
+"docs/*" = ["INP001"]
 
 
 [tool.ruff.isort]
