--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,9 @@ test = [
   "pytest-coverage",
   "pytest-cases",
   "distributed",
-  "scikit-learn",
   "openpyxl",
   "pyarrow",
+  "byop[smac, optuna, sklearn]",
 ]
 doc = [
   "mkdocs",
@@ -59,9 +59,17 @@ doc = [
   "mike",
   "pillow",
   "cairosvg",
+  "byop[smac, sklearn]",
 ]
-smac = ["smac>=2.0", "configspace"]
+docs-examples = [
+  "openml",
+  "byop[smac]"
+]
+
+sklearn = ["scikit-learn"]
+smac = ["smac>=2.0", "byop[configspace]"]
 optuna = ["optuna"]
+configspace = ["configspace"]
 
 [project.urls]
 documentation = "https://github.com/automl/byop/"
@@ -76,6 +84,9 @@ log_cli = false
 log_level = "DEBUG"
 xfail_strict = true
 addopts = "--durations=10 -vv"
+markers = [
+  "example: An example"
+]
 
 
 [tool.coverage.run]
@@ -107,7 +118,7 @@ target-version = ['py38']
 target-version = "py38"
 line-length = 88
 show-source = true
-src = ["src", "tests"]
+src = ["src", "tests", "examples"]
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
@@ -173,8 +184,8 @@ ignore = [
   "S101",    # Use of assert detected.
   "W292",    # No newline at end of file
   "PLC1901", # "" can be simplified to be falsey
-  "TCH003", # Move stdlib import into TYPE_CHECKING
-            # These tend to be lighweight and confuse pyright
+  "TCH003",  # Move stdlib import into TYPE_CHECKING
+  # These tend to be lighweight and confuse pyright
 ]
 
 exclude = [
@@ -214,7 +225,8 @@ exclude = [
 ]
 "src/byop/__version__.py" = ["D100"]
 "__init__.py" = ["I002"]
-"examples/*" = ["INP001"]
+"examples/*" = ["INP001", "I002", "E741", "D101", "D103", "T20"]
+"docs/*" = ["INP001"]
 
 
 [tool.ruff.isort]
@@ -248,7 +260,6 @@ no_implicit_optional = true
 check_untyped_defs = true
 
 warn_return_any = true
-warn_unused_ignores = true
 
 
 [[tool.mypy.overrides]]
