--- a/pyproject.toml
+++ b/pyproject.toml
@@ -218,6 +218,7 @@ exclude = [
   "D103",
   "ANN001",
   "ANN201",
+  "FBT001",
   "D100",
   "PLR2004",
   "PD901",   #  X is a bad variable name. (pandas)
@@ -231,6 +232,7 @@ exclude = [
 
 [tool.ruff.isort]
 known-first-party = ["byop"]
+known-third-party = ["sklearn"]
 no-lines-before = ["future"]
 required-imports = ["from __future__ import annotations"]
 combine-as-imports = true
