--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
   "attrs",
   "pandas",
   "numpy",
-  "pynisher>=1.0.5",
 ]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
@@ -71,6 +70,7 @@ smac = ["smac>=2.0", "byop[configspace]"]
 optuna = ["optuna"]
 configspace = ["configspace"]
 dask = ["dask<=2023.4"]
+pynisher = ["pynisher>=1.0.5"]
 
 [project.urls]
 documentation = "https://github.com/automl/byop/"
