--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
   "attrs",
   "pandas",
   "numpy",
-  "pynisher>=1.0.5",
 ]
 requires-python = ">=3.8"
 authors = [{ name = "Eddie Bergman", email = "eddiebergmanhs@gmail.com" }]
@@ -71,6 +70,8 @@ smac = ["smac>=2.0", "byop[configspace]"]
 optuna = ["optuna"]
 configspace = ["configspace"]
 dask = ["dask<=2023.4"]
+pynisher = ["pynisher>=1.0.5"]
+wandb = ["wandb"]
 
 [project.urls]
 documentation = "https://github.com/automl/byop/"
@@ -131,7 +132,7 @@ select = [
   "COM",
   "C4",
   "D",
-  "DTZ",
+  # "DTZ",  # One day I should know how to utilize timezones and dates...
   "E",
   # "EXE", Meh
   "ERA",
