--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,13 +65,14 @@ docs-examples = [
   "amltk[smac]"
 ]
 
-sklearn = ["scikit-learn"]
+sklearn = ["scikit-learn", "threadpoolctl"]
 smac = ["smac>=2.0", "amltk[configspace]"]
 optuna = ["optuna"]
 configspace = ["configspace"]
 dask = ["dask<=2023.4"]
 pynisher = ["pynisher>=1.0.5"]
 wandb = ["wandb"]
+threadpoolctl = ["threadpoolctl"]
 
 [project.urls]
 documentation = "https://github.com/automl/amltk/"
