doc: Change to AutoML Toolkit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "<code>Build Your Own Pipeline</code>"
+site_name: "<code>AutoML-Toolkit</code>"
 repo_url: https://github.com/automl/amltk/
 repo_name: automl/amltk
 
