--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,9 +150,30 @@ plugins:
 
 nav:
   - Home: "index.md"
-  - Guides: "guides/"
-  - Reference: "reference/"
-  - Examples: "examples/"  # Auto generated with docs/examples_runner.py
-  - API: "api/"  # Auto generated with docs/api_generator.py
+  - Guides:
+    - "guides/index.md"
+    - "guides/optimization.md"
+    - "guides/pipelines.md"
+    - "guides/tasks.md"
+  - Reference:
+    - "reference/index.md"
+    - "reference/buckets.md"
+    - "reference/call_limiter.md"
+    - "reference/comms.md"
+    - "reference/configspace.md"
+    - "reference/dask-jobqueue.md"
+    - "reference/data.md"
+    - "reference/history.md"
+    - "reference/metalearning.md"
+    - "reference/optuna.md"
+    - "reference/pynisher.md"
+    - "reference/sklearn.md"
+    - "reference/smac.md"
+    - "reference/threadpoolctl.md"
+    - "reference/wandb.md"
+  - Examples: "examples/"
+    # Auto generated with docs/examples_runner.py
+  - API: "api/"
+    # Auto generated with docs/api_generator.py
   - Contributing: "contributing.md"
 
