feat(Event): Allow multiple event subscribers for events

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -293,7 +293,7 @@ typeCheckingMode = "strict"
 strictListInference = true
 strictSetInference = true
 strictDictionaryInference = false
-reportImportCycles = "information"
+reportImportCycles = false
 reportMissingSuperCall = true
 reportMissingTypeArgument = false
 reportOverlappingOverload = true
