ci: Change version tagging system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ exclude_lines = [
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.8.0"
-tag_format = "v$major.$minor.$patch$prerelease"
+tag_format = "$major.$minor.$patch$prerelease"
 update_changelog_on_bump = true
 version_files = ["pyproject.toml:version", "src/amltk/__version__.py"]
 
