--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,10 +59,10 @@ dev = [
 sklearn = ["scikit-learn", "threadpoolctl"]
 smac = ["smac>=2.0", "amltk[configspace]"]
 optuna = ["optuna"]
-configspace = ["configspace"]
+configspace = ["configspace>=0.6"]
 loky = ["loky"]
 dask = ["dask<=2023.4"]
-pynisher = ["pynisher>=1.0.8"]
+pynisher = ["pynisher>=1.0.10"]
 wandb = ["wandb"]
 threadpoolctl = ["threadpoolctl"]
 xgboost = ["xgboost"]
