--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,8 +42,8 @@ theme:
 
 
 extra:
-  # version:
-  #  provider: mike
+  version:
+    provider: mike
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/automl
