--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ plugins:
       version_selector: true
       css_dir: css
       javascript_dir: js
-      canonical_version: main
+      canonical_version: latest
   - gen-files:
       scripts:
         - docs/api_generator.py
