--- a/.github/workflows/on-draft-release.yml
+++ b/.github/workflows/on-draft-release.yml
@@ -1,11 +1,10 @@
-name: create-release
+# Whenever we have a draft release, we want to:
+# * Build the sdist and attach it to the release.
+# * Ensure that the docs will build.
+name: on-draft-release
 on:
-  workflow_dispatch:
-   inputs:
-    latest:
-      description: "Set as the latest version"
-      required: false
-      default: true
+  release:
+    types: [unpublished]
 permissions:
   contents: write
 jobs:
@@ -26,10 +25,8 @@ jobs:
           name: sdist
           path: dist/*.tar.gz
 
-  deploy-docs:
+  ensure-docs:
     runs-on: ubuntu-latest
-    needs:
-      - "build-sdist"  # We only want to deploy docs if the sdist was built
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -38,4 +35,4 @@ jobs:
       - name: "Install dependancies"
         run: python -m pip install -e ".[dev]"
       - name: "Build Docs"
-        run: mike deploy --push
+        run: mkdocs --clean --strict
