--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload ${{ github.ref }} dist/*.tar.gz
+          gh release upload ${{ github.event.release.tag_name }} dist/*.tar.gz
 
   ensure-docs:
     runs-on: ubuntu-latest
