--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -26,7 +26,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.event.release.tag_name }} dist/*.tar.gz
-
   ensure-docs:
     runs-on: ubuntu-latest
     steps:
@@ -38,7 +37,6 @@ jobs:
         run: python -m pip install -e ".[dev]"
       - name: "Build Docs"
         run: mkdocs build --clean --strict
-
   # Create and attach the changelog with commitizen
   create-changelog:
     runs-on: ubuntu-latest
@@ -47,10 +45,15 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - run: python -m pip install commitizen
       - name: "Generate changelog and push"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          python -m pip install commitizen
-          changelog="$(cz changelog --dry-run "v$(cz version --project)"))"
-          gh release edit -n "$changelog"
+        run: |-
+          version="v$(cz version --project)"
+          echo "version: ${version}"
+
+          changelog="$(cz changelog --dry-run "${version}"))"
+          echo "changelog: ${changelog}"
+
+          gh release edit --notes "$changelog"
