fix(ci): Give tag for `gh`

--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -56,4 +56,4 @@ jobs:
           changelog="$(cz changelog --dry-run "${version}"))"
           echo "changelog: ${changelog}"
 
-          gh release edit --notes "$changelog"
+          gh release edit --notes "$changelog" "${version}"
