--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@
 # * Ensure that the docs will build.
 # This should be triggered from the cmdline with `just prerelease`.
 # Could also be triggered from the release page.
-name: create-release
+name: release
 on:
   workflow_dispatch:
 permissions:
@@ -43,9 +43,9 @@ jobs:
           cache: pip
       - name: "Version Bump"
         run: |
-          pipe install commitizen
+          python -m pip install commitizen
           cz bump
-      - run: pip install build
+      - run: python -m pip install build
       - run: python -m build --sdist
       - name: "Push Bumped Version"
         run: |
