--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,12 @@ on:
   workflow_dispatch:
     inputs:
       test:
+        type: boolean
         description: "Run tests?"
         required: true
         default: true
       docs:
+        type: boolean
         description: "Test docs?"
         required: true
         default: true
@@ -51,10 +53,10 @@ jobs:
         with:
           python-version: "3.10"
           cache: pip
-      - name: "Version Bump"
-        run: |
-          python -m pip install commitizen
-          cz bump
+      - name: Create bump and changelog
+        uses: commitizen-tools/commitizen-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - run: python -m pip install build
       - run: python -m build --sdist
       - name: "Push Bumped Version"
