fix(install): Segement out dependancies (bump me)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ plugins:
   - search
   - autorefs
   - glightbox
+  - site-urls
   - offline:
       enabled: !ENV [AMLTK_DOCS_OFFLINE, false]
   - markdown-exec
