--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           cache: pip
       - run: python -m pip install ".[dev]"
       - run: mkdocs build --clean --strict
-  bump-and-build:
+  bump-build-docdeploy:
     runs-on: ubuntu-latest
     needs: [test-code, test-docs]
     if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
@@ -54,10 +54,11 @@ jobs:
           python-version: "3.10"
           cache: pip
       - name: Create bump and changelog
-        id: cz
         uses: commitizen-tools/commitizen-action@master
+        id: cz
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          debug: true
       - run: python -m pip install build
       - run: python -m build --sdist
       - name: Store the distribution packages
@@ -65,16 +66,35 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
+      - run: python -m pip install ".[dev]"
+      - name: "Build and Deploy Docs"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          current_version="${{ steps.cz.outputs.version }}"
+          latest_tag="$(git tag | sort --version-sort | tail -n1)"
+
+          # Deploy this verison at any rate
+          if [ "$latest_tag" == "$current_version" ]; then
+            mike deploy \
+              --push \
+              --title "${current_version} (latest)" \
+              --update-aliases
+              "${current_version}" \
+              "latest"
+          else
+            mike deploy --push "${current_version}"
+          fi
   release:
-    needs: [bump-and-build]
+    needs: [bump-build-docdeploy]
     runs-on: ubuntu-latest
-    if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
     environment:
       name: pypi
       url: https://pypi.org/p/amltk
     permissions:
       id-token: write
     steps:
+      - uses: actions/checkout@v3
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
@@ -91,32 +111,3 @@ jobs:
             --prerelease \
             --verify-tag \
             ${{ github.event.release.tag_name }} "dist/*.tar.gz"
-  deploy-docs:
-    needs: [release]  # Only deploy docs if there is a released version
-    runs-on: ubuntu-latest
-    if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: pip
-      - run: python -m pip install ".[dev]"
-      - name: "Build and Deploy Docs"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          latest_tag="$(git tag | sort --version-sort | tail -n1)"
-          current_version="${{ github.event.release.tag_name }}"
-
-          # Deploy this verison at any rate
-          if [ "$latest_tag" == "$current_version" ]; then
-            mike deploy \
-              --push \
-              --title "${current_version} (latest)" \
-              --update-aliases
-              "${current_version}" \
-              "latest"
-          else
-            mike deploy --push "${current_version}"
-          fi
