--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ exclude_lines = [
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.11.12"
-tag_format = "v$major.$minor.$patch$prerelease"
+tag_format = "$major.$minor.$patch$prerelease"
 update_changelog_on_bump = true
 version_files = ["pyproject.toml:version", "src/amltk/__version__.py"]
 
