--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -11,7 +11,7 @@ on:
 permissions:
   contents: write
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,4 +21,4 @@ jobs:
       - name: "Install dependancies"
         run: python -m pip install -e ".[dev]"
       - name: "Build Docs"
-        run: mkdocs --clean --strict
+        run: mkdocs build --clean --strict
