--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,8 @@ jobs:
     if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-tags: 1  # Essential to later commitizen
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
