--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,10 +51,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-tags: 1  # Essential to later commitizen
+          fetch-depth: 0  # Reccommended by the action
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
           cache: pip
+      - run: git tag  # Debug statement
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         id: cz
