--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         uses: commitizen-tools/commitizen-action@master
         id: cz
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PUSH_ACCESS }}
           debug: true
       - run: python -m pip install build
       - run: python -m build --sdist
