--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           cache: pip
       - run: python -m pip install ".[dev]"
       - run: mkdocs build --clean --strict
-  bump-build-docdeploy:
+  bump:
     runs-on: ubuntu-latest
     needs: [test-code, test-docs]
     if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
@@ -64,43 +64,38 @@ jobs:
         with:
           github_token: ${{ secrets.PUSH_ACCESS }}
           debug: true
-      - run: python -m pip install build
-      - run: python -m build --sdist
-      - name: Store the distribution packages
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist/
-      - run: python -m pip install ".[dev]"
-      - name: "Build and Deploy Docs"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          current_version="${{ steps.cz.outputs.version }}"
-          latest_tag="$(git tag | sort --version-sort | tail -n1)"
-          echo "Updated version: ${current_version}"
-          echo "Latest tag: ${latest_tag}"
-
-          # Deploy this verison at any rate
-          if [ "$latest_tag" == "$current_version" ]; then
-            mike deploy \
-              --push \
-              --title "${current_version} (latest)" \
-              --update-aliases \
-              "${current_version}" \
-              "latest"
-          else
-            mike deploy --push "${current_version}"
-          fi
-  release:
-    needs: [bump-build-docdeploy]
+  build:
+    needs: [bump]
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
+    steps:
+    - run: python -m pip install build
+    - run: python -m build --sdist
+    - name: Store the distribution packages
+      uses: actions/upload-artifact@v3
+      with:
+        name: python-package-distributions
+        path: dist/
+  docs:
+    needs: [bump]
+    runs-on: ubuntu-latest
+    steps:
+    - run: python -m pip install ".[dev]"
+    - name: "Build and Deploy Docs"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        mike deploy \
+          --push \
+          --title "${current_version} (latest)" \
+          --update-aliases \
+          "${current_version}" \
+          "latest"
+  release:
+    needs: [build]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Download all the dists
-        uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v3
         with:
             name: python-package-distributions
             path: dist/
@@ -113,5 +108,16 @@ jobs:
             --prerelease \
             --verify-tag \
             ${{ github.event.release.tag_name }} "dist/*.tar.gz"
+  publish:
+    needs: [release]
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+            name: python-package-distributions
+            path: dist/
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
