--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,33 +20,31 @@ on:
 permissions:
   contents: write
 jobs:
-  test-code:
-    if: github.ref == 'refs/heads/main' && github.event.inputs.test == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: pip
-      - run: python -m pip install ".[dev]"
-      - run: pytest ${{ env.test-dir }}
-  test-docs:
-    needs: [test-code]
-    if: github.ref == 'refs/heads/main' && github.event.inputs.docs == 'true'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: pip
-      - run: python -m pip install ".[dev]"
-      - run: mkdocs build --clean --strict
+  # test-code:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.10"
+  #         cache: pip
+  #     - run: python -m pip install ".[dev]"
+  #     - run: pytest ${{ env.test-dir }}
+  # test-docs:
+  #   needs: [test-code]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.10"
+  #         cache: pip
+  #     - run: python -m pip install ".[dev]"
+  #     - run: mkdocs build --clean --strict
+  # Need to ensure we bump before we create any artifacts
   bump:
     runs-on: ubuntu-latest
-    needs: [test-code, test-docs]
-    if: always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'
+    #needs: [test-code, test-docs]
     steps:
       - uses: actions/checkout@v3
         with:
