--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,17 +6,6 @@
 name: release
 on:
   workflow_dispatch:
-    inputs:
-      test:
-        type: boolean
-        description: "Run tests?"
-        required: true
-        default: true
-      docs:
-        type: boolean
-        description: "Test docs?"
-        required: true
-        default: true
 permissions:
   contents: write
 jobs:
@@ -66,28 +55,38 @@ jobs:
     needs: [bump]
     runs-on: ubuntu-latest
     steps:
-    - run: python -m pip install build
-    - run: python -m build --sdist
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v3
-      with:
-        name: python-package-distributions
-        path: dist/
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: pip
+      - run: python -m pip install build
+      - run: python -m build --sdist
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
   docs:
     needs: [bump]
     runs-on: ubuntu-latest
     steps:
-    - run: python -m pip install ".[dev]"
-    - name: "Build and Deploy Docs"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        mike deploy \
-          --push \
-          --title "${current_version} (latest)" \
-          --update-aliases \
-          "${current_version}" \
-          "latest"
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: pip
+      - run: python -m pip install ".[dev]"
+      - name: "Build and Deploy Docs"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mike deploy \
+            --push \
+            --title "${current_version} (latest)" \
+            --update-aliases \
+            "${current_version}" \
+            "latest"
   release:
     needs: [build]
     runs-on: ubuntu-latest
