--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,23 +88,28 @@ jobs:
             "${current_version}" \
             "latest"
   release:
-    needs: [build]
+    needs: [docs, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-tags: 1
+          fetch-depth: 0
       - uses: actions/download-artifact@v3
         with:
             name: python-package-distributions
             path: dist/
+      - run: ls -R dist
       - name: "Create Github Release"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          latest_version=$(git tag | sort --version-sort | tail -n 1)
           gh release create  \
             --generate-notes \
             --prerelease \
             --verify-tag \
-            ${{ github.event.release.tag_name }} "dist/*.tar.gz"
+            "${latest_version}" "dist/amltk-${latest_version}.tar.gz"
   publish:
     needs: [release]
     runs-on: ubuntu-latest
