--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          current_version=$(git tag | sort --version-sort | tail -n 1)
           mike deploy \
             --push \
             --title "${current_version} (latest)" \
@@ -97,19 +98,18 @@ jobs:
           fetch-depth: 0
       - uses: actions/download-artifact@v3
         with:
-            name: python-package-distributions
             path: dist/
       - run: ls -R dist
       - name: "Create Github Release"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          latest_version=$(git tag | sort --version-sort | tail -n 1)
+          current_version=$(git tag | sort --version-sort | tail -n 1)
           gh release create  \
             --generate-notes \
             --prerelease \
             --verify-tag \
-            "${latest_version}" "dist/amltk-${latest_version}.tar.gz"
+            "${current_version}" "dist/amltk-${current_version}.tar.gz"
   publish:
     needs: [release]
     runs-on: ubuntu-latest
@@ -119,7 +119,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-            name: python-package-distributions
             path: dist/
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
