--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-tags: 1
+          fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
