--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,10 +80,12 @@ jobs:
           python-version: "3.10"
           cache: pip
       - run: python -m pip install ".[dev]"
-      - name: "Build and Deploy Docs"
+      - name: "Deploy Docs"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config user.name doc-bot
+          git config user.email doc-bot@amltk.com
           current_version=$(git tag | sort --version-sort | tail -n 1)
           mike deploy \
             --push \
