--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Store the distribution packages
         uses: actions/upload-artifact@v3
         with:
-          path: dist/
+          name: build-output
+          path: dist
   docs:
     needs: [bump]
     runs-on: ubuntu-latest
@@ -102,7 +103,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/download-artifact@v3
         with:
-            path: dist/
+            name: build-output
+            path: dist
       - run: ls -R dist
       - name: "Create Github Release"
         env:
@@ -123,6 +125,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-            path: dist/
+            name: build-output
+            path: dist
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
